--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,10 @@
     <script type="module" src="./client.js"></script>
   </head>
   <body>
-    <audio loop autoplay src="./backgroundtune.mp3"></audio>
+    <audio src="./backgroundtune.mp3"></audio>
     <div class="sliding-background"></div>
     <h1>video game rating system</h1>
-    <p>please drop your name, favourite game and rating! enjoy!!!!</p>
+    <h2>please drop your name, favourite game and rating! enjoy!!!!</h2>
     <form id="messageForm">
       <input type="text" name="name" placeholder="name" />
       <input type="text" name="title" placeholder="Favourite video game" />
